trunk/Archive2/95/d790bb50e1bda4/output
main.cpp:3:10: error: cannot initialize a variable of type 'int *' with an lvalue of type 'const int'
    int* y = x;
         ^   ~
main.cpp:4:10: error: cannot initialize a variable of type 'int *' with an rvalue of type 'int'
    int* z = x+x;
         ^   ~~~
2 errors generated.
